--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Free AI Timetable Generator (No Login Required)</title>
+<meta name="description" content="Create smart timetables instantly using AI. 100% free with no sign-up or login required. Ideal for students, teachers, and schools.">
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SVER7HYH21"></script>
 <script>
