--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="index.html">
+    <img src="a (1).png" alt="Company Logo" class="logo">
+  </a>
     <title>Free AI Timetable Generator (No Login Required)</title>
 <meta name="description" content="Create smart timetables instantly using AI. 100% free with no sign-up or login required. Ideal for students, teachers, and schools.">
 
