--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="Timetable.png">
     
     <title>Free AI Timetable Generator (No Login Required)</title>
 <meta name="description" content="Create smart timetables instantly using AI. 100% free with no sign-up or login required. Ideal for students, teachers, and schools.">
